# hero-builder-rs

./: .editorconfig  .envrc  .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  flake.nix  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml
docs/: hero-builder-client-b7ce8c8494775077.js  hero-builder-client-b7ce8c8494775077_bg.wasm  index.html  styles-c5f94f982fd2ee7e.css
modules/client/: Cargo.toml  index.html  tailwind.config.js
modules/client/imgs/: start_your_hero_journey.jfif
modules/client/locales/: de.json  en.json
modules/client/src/: lib.rs  main.rs
modules/client/src/components/: app.rs  home.rs  mod.rs  not_found.rs
modules/client/src/components/editor/: attributes.rs  editor_params.rs  index.rs  metadata.rs  mod.rs  skills.rs
modules/client/src/components/layout/: footer.rs  header.rs  mod.rs  sidebar.rs
modules/client/src/models/: attributes.rs  derived_attributes.rs  hero.rs  mod.rs  skills.rs
modules/client/src/services/: exporter.rs  importer.rs
modules/client/src/utils/: helpers.rs  mod.rs  param_uuid.rs
