[package]
name = "hero-builder-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.13", features = ["csr"] }
leptos_query = { version = "0.5.3", features = ["csr", "indexed_db"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
opentelemetry = "0.24.0"
opentelemetry-stdout = "0.5.0"
opentelemetry_sdk = "0.24.1"
opentelemetry-http = "0.13.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["serde", "v7"] }
